--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.16.0",
+    "remark-gfm": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
